<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 Keith Cassidy
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="buoy_1_gps">Buoy 1 GPS</string>
    <string name="buoy_2_gps">Buoy 2 GPS</string>
    <string name="manage_buoy_list">Edit Buoy List</string>
    <string name="blankBuoyName">Buoy</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="add">Add</string>
    <string name="spot_time">Spot Time</string>
    <string name="buttonAddManualTime">Log Spot Time</string>
    <string name="eula">Standard EULA. ie: By using this software you agree that I (the app developer) am not liable for any bad things that happen to you while you\'re using it.Don\'t use it if your life or anything important like that depends on it.</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="enable_gps">Please enable GPS to use this app.</string>
    <string name="show_gps_settings">GPS Settings</string>
    <string name="confirm_delete_buoy">Delete buoy: </string>
    <string name="app_name">Finish Line</string>
    <string name="menu_delete">    Delete </string>
    <string name="icon_track">    Track</string>
    <string name="menu_edit">    Edit</string>
    <string name="menu_show_on_map">    Show on map</string>
    <string name="settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_share">Share</string>
    <string name="menu_set_auto_map">Auto</string>
    <string name="menu_autozoom">Auto Zoom</string>
    <string name="menu_set_manual_map">Manual</string>
    <string name="menu_clear_crossing_times">Clear crossing times</string>
    <string name="finish_line_service">FinishLine Service</string>
    <string name="button_start">Start</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_activity_button_bar">ButtonBar</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="button_set_finish_line">Set Finish Line</string>
    <string name="race_notification">Select to restore.</string>
    <string name="app_name_is_running">Finish Line is running</string>
    <string name="title_activity_bouy_setup">FinishLine Bouys</string>
    <string name="tab_buoy1">Buoy 1</string>
    <string name="tab_buoy2">Buoy 2</string>
    <string name="select_saved_buoy">Select Buoy:</string>
    <string name="or_edit_buoy">Or Edit Buoy Details:</string>
    <string name="buoy_name">Name:</string>
    <string name="buoy_latitude">Latitude:</string>
    <string name="buoy_longitude">Longitude:</string>
    <string name="save_bouy">Save to Buoy List</string>
    <string name="boat_name">Boat name</string>
    <string name="title_linecrossings">TIMES</string>
    <string name="title_setup_buoy1">BUOY 1</string>
    <string name="title_setup_buoy2">BUOY 2</string>
    <string name="title_home">HOME</string>
    <string name="title_map">MAP</string>
    <string name="title_activity_home">Finish Line</string>
    <string name="save_label">Enter the position of this buoy. If you want to save it for another time, give it a name and press the save button.</string>
    <string name="set_with_gps">Set From GPS</string>
    <string name="spinner_select_buoy">Select a Buoy</string>
    <string name="title_activity_set_from_gps">Set From GPS</string>
    <string name="set_from_gps_label">Where is the buoy as you pass it? (Relative to the track of the boat). You can set this at any time</string>
    <string name="button_set_pos_gps">Log Position</string>
    <string name="accuracy">Accuracy:</string>
    <string name="meters_forward">m Forward</string>
    <string name="meters_astern">m Astern</string>
    <string name="meters_port">m to Port</string>
    <string name="meters_starboard">m to Starboard</string>
    <string name="gps_pos_invalid">Position Invalid</string>
    <string name="gps_status">GPS Status:</string>
    <string name="gps_status_disabled">Not turned on!!</string>
    <string name="gps_status_waiting">Waiting..</string>
    <string name="gps_status_ready">Working..</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="buoy_position">Buoy Position:</string>
    <string name="position">Position:</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_buoy_list">Buoy List</string>
    <string name="buoy_list_title">Buoy List</string>
    <string name="finish_line_buoys">Set Your Finish Line Buoys</string>
    <string name="press_start_to_log">Press Start To Log Crossing Times</string>
    <string name="starting_race">Starting Race</string>
    <string name="resuming_race">Resuming Race</string>
    <string name="stopping_race">Stopping Race</string>
    <string name="status">GPS Status</string>
    <string name="status_invalid_location">Invalid GPS location</string>
    <string name="status_inaccurate_location">Location inaccurate</string>
    <string name="status_gps_not_enabled">GPS not enabled!</string>
    <string name="status_location_ok">Location received</string>
    <string name="status_gps_waiting">Waiting for location</string>
    <string name="location">Location</string>
    <string name="distance">Distance to line</string>
    <string name="bearing">Track</string>
    <string name="distance_infinite">…</string>
    <string name="no_crossings">No crossings yet.</string>
    <string name="confirm_quit">Are you sure you want to exit?</string>
    <string name="map">Map</string>
    <string name="save_and_close">Save</string>
    <string name="coordinate_format">LatLong Format</string>
    <string name="Max_GPS_accuracy">Max GPS error</string>
    <string name="map_not_installed">Google Maps Not Installed</string>
    <string name="confirm_delete_crossings">Delete all crossing times?</string>

    <string-array name="CoordinateFormat">
        <item>Decimal</item>
        <item>Degrees, decimal minutes</item>
        <item>Degrees, minutes, decimal seconds</item>
    </string-array>
    <string-array name="CoordinateFormatIndex">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="MaxAccuracy">
        <item>10m</item>
        <item>20m</item>
        <item>50m</item>
    </string-array>
    <string-array name="MaxAccuracyIndex">
        <item>10</item>
        <item>20</item>
        <item>50</item>
    </string-array>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_buoy_manage">Manage Buoy List</string>

</resources>