<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonStart"
        android:layout_alignBottom="@+id/buttonStart"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:drawableLeft="@drawable/ic_action_playback_stop"
        android:minHeight="64dp"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/textViewDistanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewBearingLabel"
        android:layout_marginLeft="12dp"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewBearingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewPosLabel"
        android:layout_marginLeft="12dp"
        android:text="@string/bearing"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewPosLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewStatusLabel"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewBearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewDistanceLabel"
        android:layout_alignLeft="@+id/textViewLocation"
        android:text="@string/distance_infinite"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewDistanceLabel"
        android:layout_alignBottom="@+id/textViewDistanceLabel"
        android:layout_alignLeft="@+id/textViewBearing"
        android:text="@string/distance_infinite"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewPressStart"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_action_playback_play"
        android:minHeight="64dp"
        android:text="@string/start" />

    <TextView
        android:id="@+id/textViewPressStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/press_start_to_log"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPosLabel"
        android:layout_centerVertical="true"
        android:text="@string/status"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewStatusLabel"
        android:layout_below="@+id/textViewStatusLabel"
        android:text="@string/status_gps_waiting"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewBearing"
        android:layout_alignLeft="@+id/buttonStop"
        android:text="@string/distance_infinite"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>